--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 # Site settings
 title: Lakshay Pandey
-motto: All who Wander are not lost
-email: your-email@domain.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+  Jekyll Theme Demo
+baseurl: "/about/" # the subpath of your site, e.g. /blog/
+url: "http://lakshaypandey.github.io" # the base hostname & protocol for your site
 twitter_username: lakshaypandey
-github_username:  jekyll
-instagram_username: lakshaypandey
-linkedin_username: lakshaypandey
+github_username: username
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+markdown_ext:  markdown,mkdown,mkdn,mkd,md
+
+redcarpet:
+  extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "fenced_code_blocks"]
