make hello world, fix quote header

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Lakshay Pandey
-motto: All who Wander are not lost
+motto: All who wander are not lost
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
