--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ twitter_username: lakshaypandey
 github_username:  jekyll
 instagram_username: lakshaypandey
 linkedin_username: lakshaypandey
+photoblog_link: http://photoblog.lakshaypandey.com
 
 # Build settings
 markdown: kramdown
