comment blog link - fix description

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ relative_permalinks: true
 # Setup
 title:            Lakshay Pandey
 tagline:          'All who wander are not lost'
-description:      'Personal page for Lakshay Pandey'
+description:      'All who wander are not lost - The Lord of the Rings'
 url:              http://hyde.getpoole.com
 baseurl:          /
 blog_url: /blog
