--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,14 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
+#kramdown:
+#  input: GFM
+#  syntax_highlighter: rouge
+
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+# relative_permalinks: true
 
 # Setup
 title:            Lakshay Pandey
@@ -15,12 +19,14 @@ baseurl:          /
 blog_url: /blog
 photoblog_url: https://photoblog.lakshaypandey.com
 contact_url: /contact
-resume_url: /public/Lakshay_Pandey_Mar_2015.pdf
+resume_url: /public/LakshayPandey.pdf
+
+
 
 author:
   name:           'Mark Otto'
   url:            https://twitter.com/mdo
-
+gems: [jekyll-paginate, jekyll-gist]
 paginate:         5
 paginate_path: "blog/page:num/"
 
