--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl:          /
 blog_url: /blog
 photoblog_url: https://photoblog.lakshaypandey.com
 contact_url: /contact
-resume_url: /public/LakshayPandey.pdf
+resume_url: /public/Lakshay_Pandey.pdf
 
 
 
